grammar/tree-sitter-mprx/test/corpus/elements.txt
================================================================================
Self-closing element with a string attribute
================================================================================

<page title="Users" />

--------------------------------------------------------------------------------

(source_file
  (element
    (self_closing_element
      name: (identifier)
      (attribute
        name: (identifier)
        value: (string
          value: (string_content))))))

================================================================================
Self-closing element with no attributes
================================================================================

<page />

--------------------------------------------------------------------------------

(source_file
  (element
    (self_closing_element
      name: (identifier))))

================================================================================
Container element with text content
================================================================================

<title>Users</title>

--------------------------------------------------------------------------------

(source_file
  (element
    (container_element
      name: (identifier)
      text: (text)
      (identifier))))
